src/test/compile-fail/import-glob-path.rs
// error-pattern:expected
import foo::*::bar